apps/monitoring/base/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    cert-manager.io/cluster-issuer: nerdd-issuer
spec:
  ingressClassName: haproxy
  rules:
    - host: nerdd.univie.ac.at
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
  tls:
    - hosts:
        - nerdd.univie.ac.at
      secretName: grafana-tls
